# dop_group_sum_lesson

./: .gitignore  README.md  pyproject.toml
data/: some_kind_of_records.json
dop_group_sum_lesson/: dop_group_sum_lesson.py  expence.py
src/: dop_group_sum_lesson.py  expence.py  input_data_schema.json
templates/: page.html
